--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.catboost filter=lfs diff=lfs merge=lfs -text
 tests/validation_data/validation.csv filter=lfs diff=lfs merge=lfs -text
