--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.catboost filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
+*.cbm filter=lfs diff=lfs merge=lfs -text
 tests/validation_data/validation.csv filter=lfs diff=lfs merge=lfs -text
